config("mpir_config") {
  include_dirs = ["."]
  defines = [
    "__GMP_LIBGMP_DLL",
    "__GMP_WITHIN_GMP",
    "__GMP_WITHIN_GMPXX",

    "_CRT_SECURE_NO_WARNINGS",
  ]

  if (is_win) {
    defines += ["WIN32"]
  }
}

config ("mpir_config_public") {
  include_dirs = ["."]
}

shared_library("mpir_shared") {
  public_configs = [":mpir_config_public"]
  deps = [
    ":mpir_root",
    ":mpir_cxx",
    ":mpir_fft",
    ":mpir_mpf",
    ":mpir_mpn_generic",
    ":mpir_mpq",
    ":mpir_mpz",
    ":mpir_printf",
    ":mpir_scanf",
  ]
}

#static_library("mpir_static") {
group("mpir_static") {
  public_configs = [
    ":mpir_config_public",
  ]

  deps = [
    ":mpir_root",
    ":mpir_cxx",
    ":mpir_fft",
    ":mpir_mpf",
    ":mpir_mpn_generic",
    ":mpir_mpq",
    ":mpir_mpz",
    ":mpir_printf",
    ":mpir_scanf",
  ]
}

source_set("mpir_root") {
  configs += [":mpir_config"]

  sources = [
    "assert.c",
    "errno.c",
    "extract-dbl.c",
    "invalid.c",
    "memory.c",
    "mp_bpl.c",
    "mp_clz_tab.c",
    "mp_dv_tab.c",
    "mp_get_fns.c",
    "mp_minv_tab.c",
    "mp_set_fns.c",
    "nextprime.c",
    "primesieve.c",
    "randbui.c",
    "randclr.c",
    "randdef.c",
    "randiset.c",
    "randlc2s.c",
    "randlc2x.c",
    "randmt.c",
    "randmts.c",
    "randmui.c",
    "rands.c",
    "randsd.c",
    "randsdui.c",
    "tal-reent.c",
    "version.c",

    "config.h",
    "mpir.h",
  ]
}

source_set("mpir_cxx") {
  configs += [":mpir_config"]

  sources = [
    "cxx/dummy.cc",
    "cxx/isfuns.cc",
    "cxx/ismpf.cc",
    "cxx/ismpq.cc",
    "cxx/ismpz.cc",
    "cxx/ismpznw.cc",
    "cxx/osdoprnti.cc",
    "cxx/osfuns.cc",
    "cxx/osmpf.cc",
    "cxx/osmpq.cc",
    "cxx/osmpz.cc",
  ]
}

source_set("mpir_fft") {
  configs += [":mpir_config"]

  sources = [
    "fft/adjust.c",
    "fft/adjust_sqrt2.c",
    "fft/butterfly_lshB.c",
    "fft/butterfly_rshB.c",
    "fft/combine_bits.c",
    "fft/div_2expmod_2expp1.c",
    "fft/fermat_to_mpz.c",
    "fft/fft_mfa_trunc_sqrt2.c",
    "fft/fft_mfa_trunc_sqrt2_inner.c",
    "fft/fft_negacyclic.c",
    "fft/fft_radix2.c",
    "fft/fft_trunc.c",
    "fft/fft_trunc_sqrt2.c",
    "fft/ifft_mfa_trunc_sqrt2.c",
    "fft/ifft_negacyclic.c",
    "fft/ifft_radix2.c",
    "fft/ifft_trunc.c",
    "fft/ifft_trunc_sqrt2.c",
    "fft/mul_2expmod_2expp1.c",
    "fft/mul_fft_main.c",
    "fft/mul_mfa_trunc_sqrt2.c",
    "fft/mul_trunc_sqrt2.c",
    "fft/mulmod_2expp1.c",
    "fft/normmod_2expp1.c",
    "fft/revbin.c",
    "fft/split_bits.c",
  ]
}

source_set("mpir_mpf") {
  configs += [":mpir_config"]

  sources = [
    "mpf/abs.c",
    "mpf/add.c",
    "mpf/add_ui.c",
    "mpf/ceilfloor.c",
    "mpf/clear.c",
    "mpf/clears.c",
    "mpf/cmp.c",
    "mpf/cmp_d.c",
    "mpf/cmp_si.c",
    "mpf/cmp_ui.c",
    "mpf/cmp_z.c",
    "mpf/div.c",
    "mpf/div_2exp.c",
    "mpf/div_ui.c",
    "mpf/dump.c",
    "mpf/eq.c",
    "mpf/fits_s.h",
    "mpf/fits_si.c",
    "mpf/fits_sint.c",
    "mpf/fits_slong.c",
    "mpf/fits_sshort.c",
    "mpf/fits_u.h",
    "mpf/fits_ui.c",
    "mpf/fits_uint.c",
    "mpf/fits_ulong.c",
    "mpf/fits_ushort.c",
    "mpf/get_d.c",
    "mpf/get_dfl_prec.c",
    "mpf/get_d_2exp.c",
    "mpf/get_prc.c",
    "mpf/get_si.c",
    "mpf/get_str.c",
    "mpf/get_ui.c",
    "mpf/init.c",
    "mpf/init2.c",
    "mpf/inits.c",
    "mpf/inp_str.c",
    "mpf/int_p.c",
    "mpf/iset.c",
    "mpf/iset_d.c",
    "mpf/iset_si.c",
    "mpf/iset_str.c",
    "mpf/iset_ui.c",
    "mpf/mul.c",
    "mpf/mul_2exp.c",
    "mpf/mul_ui.c",
    "mpf/neg.c",
    "mpf/out_str.c",
    "mpf/pow_ui.c",
    "mpf/random2.c",
    "mpf/reldiff.c",
    "mpf/rrandomb.c",
    "mpf/set.c",
    "mpf/set_d.c",
    "mpf/set_dfl_prec.c",
    "mpf/set_prc.c",
    "mpf/set_prc_raw.c",
    "mpf/set_q.c",
    "mpf/set_si.c",
    "mpf/set_str.c",
    "mpf/set_ui.c",
    "mpf/set_z.c",
    "mpf/size.c",
    "mpf/sqrt.c",
    "mpf/sqrt_ui.c",
    "mpf/sub.c",
    "mpf/sub_ui.c",
    "mpf/swap.c",
    "mpf/trunc.c",
    "mpf/ui_div.c",
    "mpf/ui_sub.c",
    "mpf/urandomb.c",
  ]
}

source_set("mpir_mpn_generic") {
  configs += [":mpir_config"]

  sources = [
    "mpn/generic/add.c",
    "mpn/generic/addadd_n.c",
    "mpn/generic/addmul_1.c",
    "mpn/generic/addsub_n.c",
    "mpn/generic/add_1.c",
    "mpn/generic/add_err1_n.c",
    "mpn/generic/add_err2_n.c",
    "mpn/generic/add_n.c",
    "mpn/generic/andn_n.c",
    "mpn/generic/and_n.c",
    "mpn/generic/bdivmod.c",
    "mpn/generic/binvert.c",
    "mpn/generic/cmp.c",
    "mpn/generic/comb_tables.c",
    "mpn/generic/com_n.c",
    "mpn/generic/copyd.c",
    "mpn/generic/copyi.c",
    "mpn/generic/dc_bdiv_q.c",
    "mpn/generic/dc_bdiv_qr.c",
    "mpn/generic/dc_bdiv_qr_n.c",
    "mpn/generic/dc_bdiv_q_n.c",
    "mpn/generic/dc_divappr_q.c",
    "mpn/generic/dc_div_q.c",
    "mpn/generic/dc_div_qr.c",
    "mpn/generic/dc_div_qr_n.c",
    "mpn/generic/divexact.c",
    "mpn/generic/divexact_1.c",
    "mpn/generic/divexact_by3c.c",
    "mpn/generic/divexact_byff.c",
    "mpn/generic/divexact_byfobm1.c",
    "mpn/generic/divisible_p.c",
    "mpn/generic/divrem.c",
    "mpn/generic/divrem_1.c",
    "mpn/generic/divrem_2.c",
    "mpn/generic/divrem_euclidean_qr_1.c",
    "mpn/generic/divrem_euclidean_qr_2.c",
    "mpn/generic/divrem_euclidean_r_1.c",
    "mpn/generic/divrem_hensel_qr_1.c",
    "mpn/generic/divrem_hensel_qr_1_1.c",
    "mpn/generic/divrem_hensel_qr_1_2.c",
    "mpn/generic/divrem_hensel_rsh_qr_1.c",
    "mpn/generic/divrem_hensel_r_1.c",
    "mpn/generic/dump.c",
    "mpn/generic/fib2_ui.c",
    "mpn/generic/fib_table.c",
    "mpn/generic/gcd.c",
    "mpn/generic/gcdext.c",
    "mpn/generic/gcdext_1.c",
    "mpn/generic/gcdext_lehmer.c",
    "mpn/generic/gcd_1.c",
    "mpn/generic/gcd_subdiv_step.c",
    "mpn/generic/get_d.c",
    "mpn/generic/get_str.c",
    "mpn/generic/mparam.h",
    "mpn/generic/hamdist.c",
    "mpn/generic/hgcd.c",
    "mpn/generic/hgcd2.c",
    "mpn/generic/hgcd2_jacobi.c",
    "mpn/generic/hgcd_appr.c",
    "mpn/generic/hgcd_jacobi.c",
    "mpn/generic/hgcd_matrix.c",
    "mpn/generic/hgcd_reduce.c",
    "mpn/generic/hgcd_step.c",
    "mpn/generic/invert.c",
    "mpn/generic/inv_divappr_q.c",
    "mpn/generic/inv_divappr_q_n.c",
    "mpn/generic/inv_div_q.c",
    "mpn/generic/inv_div_qr.c",
    "mpn/generic/inv_div_qr_n.c",
    "mpn/generic/iorn_n.c",
    "mpn/generic/ior_n.c",
    "mpn/generic/jacobi.c",
    "mpn/generic/jacobi_2.c",
    "mpn/generic/jacobi_base.c",
    "mpn/generic/longlong_inc.h",
    "mpn/generic/lshift.c",
    "mpn/generic/matrix22_mul.c",
    "mpn/generic/matrix22_mul1_inverse_vector.c",
    "mpn/generic/modexact_1c_odd.c",
    "mpn/generic/mod_1.c",
    "mpn/generic/mod_1_1.c",
    "mpn/generic/mod_1_2.c",
    "mpn/generic/mod_1_3.c",
    "mpn/generic/mod_34lsub1.c",
    "mpn/generic/mp_bases.c",
    "mpn/generic/mul.c",
    "mpn/generic/mulhigh_n.c",
    "mpn/generic/mullow_basecase.c",
    "mpn/generic/mullow_n.c",
    "mpn/generic/mullow_n_basecase.c",
    "mpn/generic/mulmid.c",
    "mpn/generic/mulmid_basecase.c",
    "mpn/generic/mulmid_n.c",
    "mpn/generic/mulmod_2expm1.c",
    "mpn/generic/mulmod_2expp1_basecase.c",
    "mpn/generic/mulmod_bexpp1.c",
    "mpn/generic/mul_1.c",
    "mpn/generic/mul_basecase.c",
    "mpn/generic/mul_fft.c",
    "mpn/generic/mul_n.c",
    "mpn/generic/nand_n.c",
    "mpn/generic/neg_n.c",
    "mpn/generic/nior_n.c",
    "mpn/generic/nsumdiff_n.c",
    "mpn/generic/perfect_square_p.c",
    "mpn/generic/popcount.c",
    "mpn/generic/powlo.c",
    "mpn/generic/powm.c",
    "mpn/generic/pow_1.c",
    "mpn/generic/preinv_divrem_1.c",
    "mpn/generic/preinv_mod_1.c",
    "mpn/generic/random.c",
    "mpn/generic/random2.c",
    "mpn/generic/randomb.c",
    "mpn/generic/redc_1.c",
    "mpn/generic/redc_2.c",
    "mpn/generic/redc_n.c",
    "mpn/generic/rootrem.c",
    "mpn/generic/rootrem_basecase.c",
    "mpn/generic/rrandom.c",
    "mpn/generic/rshift.c",
    "mpn/generic/rsh_divrem_hensel_qr_1.c",
    "mpn/generic/rsh_divrem_hensel_qr_1_1.c",
    "mpn/generic/rsh_divrem_hensel_qr_1_2.c",
    "mpn/generic/sb_bdiv_q.c",
    "mpn/generic/sb_bdiv_qr.c",
    "mpn/generic/sb_divappr_q.c",
    "mpn/generic/sb_div_q.c",
    "mpn/generic/sb_div_qr.c",
    "mpn/generic/scan0.c",
    "mpn/generic/scan1.c",
    "mpn/generic/set_str.c",
    "mpn/generic/sizeinbase.c",
    "mpn/generic/sqrtrem.c",
    "mpn/generic/sqr_basecase.c",
    "mpn/generic/sub.c",
    "mpn/generic/subadd_n.c",
    "mpn/generic/submul_1.c",
    "mpn/generic/sub_1.c",
    "mpn/generic/sub_err1_n.c",
    "mpn/generic/sub_err2_n.c",
    "mpn/generic/sub_n.c",
    "mpn/generic/sumdiff_n.c",
    "mpn/generic/tdiv_q.c",
    "mpn/generic/tdiv_qr.c",
    "mpn/generic/toom3_mul.c",
    "mpn/generic/toom3_mul_n.c",
    "mpn/generic/toom42_mulmid.c",
    "mpn/generic/toom4_mul.c",
    "mpn/generic/toom4_mul_n.c",
    "mpn/generic/toom8h_mul.c",
    "mpn/generic/toom8_sqr_n.c",
    "mpn/generic/toom_couple_handling.c",
    "mpn/generic/toom_eval_dgr3_pm1.c",
    "mpn/generic/toom_eval_dgr3_pm2.c",
    "mpn/generic/toom_eval_pm1.c",
    "mpn/generic/toom_eval_pm2.c",
    "mpn/generic/toom_eval_pm2exp.c",
    "mpn/generic/toom_eval_pm2rexp.c",
    "mpn/generic/toom_interpolate_16pts.c",

    # what?
    #"mpn/generic/udiv_w_sdiv.c",

    "mpn/generic/urandomb.c",
    "mpn/generic/urandomm.c",
    "mpn/generic/xnor_n.c",
    "mpn/generic/xor_n.c",
    "mpn/generic/zero.c",
    "mpn/generic/zero_p.c",
  ]
}

source_set("mpir_mpq") {
  configs += [":mpir_config"]

  sources = [
    "mpq/abs.c",
    "mpq/aors.c",
    "mpq/canonicalize.c",
    "mpq/clear.c",
    "mpq/clears.c",
    "mpq/cmp.c",
    "mpq/cmp_si.c",
    "mpq/cmp_ui.c",
    "mpq/div.c",
    "mpq/equal.c",
    "mpq/get_d.c",
    "mpq/get_den.c",
    "mpq/get_num.c",
    "mpq/get_str.c",
    "mpq/init.c",
    "mpq/inits.c",
    "mpq/inp_str.c",
    "mpq/inv.c",
    "mpq/md_2exp.c",
    "mpq/mul.c",
    "mpq/neg.c",
    "mpq/out_str.c",
    "mpq/set.c",
    "mpq/set_d.c",
    "mpq/set_den.c",
    "mpq/set_f.c",
    "mpq/set_num.c",
    "mpq/set_si.c",
    "mpq/set_str.c",
    "mpq/set_ui.c",
    "mpq/set_z.c",
    "mpq/swap.c",
  ]
}

source_set("mpir_mpz") {
  configs += [":mpir_config"]

  sources = [
    "mpz/2fac_ui.c",
    "mpz/abs.c",
    "mpz/add.c",
    "mpz/add_ui.c",
    "mpz/and.c",
    "mpz/aors.h",
    "mpz/aorsmul.c",
    "mpz/aorsmul_i.c",
    "mpz/aors_ui.h",
    "mpz/array_init.c",
    "mpz/bin_ui.c",
    "mpz/bin_uiui.c",
    "mpz/cdiv_q.c",
    "mpz/cdiv_qr.c",
    "mpz/cdiv_qr_ui.c",
    "mpz/cdiv_q_ui.c",
    "mpz/cdiv_r.c",
    "mpz/cdiv_r_ui.c",
    "mpz/cdiv_ui.c",
    "mpz/cfdiv_q_2exp.c",
    "mpz/cfdiv_r_2exp.c",
    "mpz/clear.c",
    "mpz/clears.c",
    "mpz/clrbit.c",
    "mpz/cmp.c",
    "mpz/cmpabs.c",
    "mpz/cmpabs_d.c",
    "mpz/cmpabs_ui.c",
    "mpz/cmp_d.c",
    "mpz/cmp_si.c",
    "mpz/cmp_ui.c",
    "mpz/com.c",
    "mpz/combit.c",
    "mpz/cong.c",
    "mpz/cong_2exp.c",
    "mpz/cong_ui.c",
    "mpz/divegcd.c",
    "mpz/divexact.c",
    "mpz/dive_ui.c",
    "mpz/divis.c",
    "mpz/divis_2exp.c",
    "mpz/divis_ui.c",
    "mpz/dump.c",
    "mpz/export.c",
    "mpz/fac_ui.c",
    "mpz/fdiv_q.c",
    "mpz/fdiv_qr.c",
    "mpz/fdiv_qr_ui.c",
    "mpz/fdiv_q_ui.c",
    "mpz/fdiv_r.c",
    "mpz/fdiv_r_ui.c",
    "mpz/fdiv_ui.c",
    "mpz/fib2_ui.c",
    "mpz/fib_ui.c",
    "mpz/fits_s.h",
    "mpz/fits_si.c",
    "mpz/fits_sint.c",
    "mpz/fits_slong.c",
    "mpz/fits_sshort.c",
    "mpz/fits_ui.c",
    "mpz/fits_uint.c",
    "mpz/fits_ulong.c",
    "mpz/fits_ushort.c",
    "mpz/gcd.c",
    "mpz/gcdext.c",
    "mpz/gcd_ui.c",
    "mpz/getlimbn.c",
    "mpz/get_d.c",
    "mpz/get_d_2exp.c",
    "mpz/get_si.c",
    "mpz/get_str.c",
    "mpz/get_sx.c",
    "mpz/get_ui.c",
    "mpz/get_ux.c",
    "mpz/hamdist.c",
    "mpz/import.c",
    "mpz/init.c",
    "mpz/init2.c",
    "mpz/inits.c",
    "mpz/inp_raw.c",
    "mpz/inp_str.c",
    "mpz/invert.c",
    "mpz/ior.c",
    "mpz/iset.c",
    "mpz/iset_d.c",
    "mpz/iset_si.c",
    "mpz/iset_str.c",
    "mpz/iset_sx.c",
    "mpz/iset_ui.c",
    "mpz/iset_ux.c",
    "mpz/jacobi.c",
    "mpz/kronsz.c",
    "mpz/kronuz.c",
    "mpz/kronzs.c",
    "mpz/kronzu.c",
    "mpz/lcm.c",
    "mpz/lcm_ui.c",
    "mpz/likely_prime_p.c",
    "mpz/limbs_finish.c",
    "mpz/limbs_modify.c",
    "mpz/limbs_read.c",
    "mpz/limbs_write.c",
    "mpz/lucnum2_ui.c",
    "mpz/lucnum_ui.c",
    "mpz/mfac_uiui.c",
    "mpz/millerrabin.c",
    "mpz/miller_rabin.c",
    "mpz/mod.c",
    "mpz/mul.c",
    "mpz/mul_2exp.c",
    "mpz/mul_i.h",
    "mpz/mul_si.c",
    "mpz/mul_ui.c",
    "mpz/neg.c",
    "mpz/nextprime.c",
    "mpz/next_prime_candidate.c",
    "mpz/nthroot.c",
    "mpz/n_pow_ui.c",
    "mpz/oddfac_1.c",
    "mpz/out_raw.c",
    "mpz/out_str.c",
    "mpz/perfpow.c",
    "mpz/perfsqr.c",
    "mpz/popcount.c",
    "mpz/powm.c",
    "mpz/powm_ui.c",
    "mpz/pow_ui.c",
    "mpz/pprime_p.c",
    "mpz/primorial_ui.c",
    "mpz/probable_prime_p.c",
    "mpz/prodlimbs.c",
    "mpz/realloc.c",
    "mpz/realloc2.c",
    "mpz/remove.c",
    "mpz/roinit_n.c",
    "mpz/root.c",
    "mpz/rootrem.c",
    "mpz/rrandomb.c",
    "mpz/scan0.c",
    "mpz/scan1.c",
    "mpz/set.c",
    "mpz/setbit.c",
    "mpz/set_d.c",
    "mpz/set_f.c",
    "mpz/set_q.c",
    "mpz/set_si.c",
    "mpz/set_str.c",
    "mpz/set_sx.c",
    "mpz/set_ui.c",
    "mpz/set_ux.c",
    "mpz/size.c",
    "mpz/sizeinbase.c",
    "mpz/sqrt.c",
    "mpz/sqrtrem.c",
    "mpz/sub.c",
    "mpz/sub_ui.c",
    "mpz/swap.c",
    "mpz/tdiv_q.c",
    "mpz/tdiv_qr.c",
    "mpz/tdiv_qr_ui.c",
    "mpz/tdiv_q_2exp.c",
    "mpz/tdiv_q_ui.c",
    "mpz/tdiv_r.c",
    "mpz/tdiv_r_2exp.c",
    "mpz/tdiv_r_ui.c",
    "mpz/tdiv_ui.c",
    "mpz/trial_division.c",
    "mpz/tstbit.c",
    "mpz/ui_pow_ui.c",
    "mpz/ui_sub.c",
    "mpz/urandomb.c",
    "mpz/urandomm.c",
    "mpz/xor.c",
  ]
}

source_set("mpir_printf") {
  configs += [":mpir_config"]

  sources = [
    "printf/asprintf.c",
    "printf/asprntffuns.c",
    "printf/doprnt.c",
    "printf/doprntf.c",
    "printf/doprnti.c",
    "printf/fprintf.c",
    "printf/obprintf.c",
    "printf/obprntffuns.c",
    "printf/obvprintf.c",
    "printf/printf.c",
    "printf/printffuns.c",
    "printf/repl-vsnprintf.c",
    "printf/snprintf.c",
    "printf/snprntffuns.c",
    "printf/sprintf.c",
    "printf/sprintffuns.c",
    "printf/vasprintf.c",
    "printf/vfprintf.c",
    "printf/vprintf.c",
    "printf/vsnprintf.c",
    "printf/vsprintf.c",
  ]
}

source_set("mpir_scanf") {
  configs += [":mpir_config"]

  sources = [
    "scanf/doscan.c",
    "scanf/fscanf.c",
    "scanf/fscanffuns.c",
    "scanf/scanf.c",
    "scanf/sscanf.c",
    "scanf/sscanffuns.c",
    "scanf/vfscanf.c",
    "scanf/vscanf.c",
    "scanf/vsscanf.c",
  ]
}